[gd_scene load_steps=4 format=3 uid="uid://5k1wa3yu2k7n"]

[ext_resource type="Script" uid="uid://tfjl8f6nkqw0" path="res://objetos/espinhos/espinhos_no_chao.gd" id="1_5pp36"]
[ext_resource type="SpriteFrames" uid="uid://cbp1je36fcvpr" path="res://objetos/espinhos/espinhos_anim.tres" id="2_10qio"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jy6rk"]
size = Vector2(16, 16)

[node name="espinhos_no_chao" type="Area2D" node_paths=PackedStringArray("colisionShape", "animation", "timer_recolher", "timer_aparecer")]
script = ExtResource("1_5pp36")
colisionShape = NodePath("CollisionShape2D")
animation = NodePath("AnimatedSprite2D")
timer_recolher = NodePath("TimerRecolher")
timer_aparecer = NodePath("TimerAparecer")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_jy6rk")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = ExtResource("2_10qio")
animation = &"aparecendo"

[node name="TimerAparecer" type="Timer" parent="."]
one_shot = true

[node name="TimerRecolher" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="timeout" from="TimerAparecer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="TimerRecolher" to="." method="_on_timer_recolher_timeout"]
